ENH: Rejected residues showed

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,16 @@
             color: green;
         }
 
+        .redtable th {
+            background-color: #FA6347;
+            border: 1px solid #FA6347;
+        }
+
+        .redtable td {
+            border: 1px solid #FA6347;
+        }
+
+
     </style>
 </head>
 
