ENH: Some template tweaks

--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
 <body>
 <div id="header">
 <h1>{{ self.title() }}</h1>
-{{ date }}
+By {{ version_string }} at {{date}} 
 </div>
 
 <div id="content">
