--- a/templates/report.html
+++ b/templates/report.html
@@ -77,23 +77,29 @@
 <thead>
 <tr>
     <th>ID</th>
+    <th>Structure Title</th>
     <th>Chain ID</th>
+    <th>Macromolecule Name</th>
     <th>{{ component }} residues</th>
-    <th>EC numbers</th>
+    <th>EC Numbers</th>
 </tr>
 </thead>
 <tbody>
     {% for structure, chains in results_by_chains %}
 <tr>
     <td>{{ structure.id }}</td>
+    <td title="{{ structure.title }}">{{ structure.title|truncate(40) }}</td>
     <td>{{ chains[0][0].id }}</td>
+    <td title="{{ chains[0][0].compound }}">{{ chains[0][0].compound|truncate(40) }}</td>
     <td>{{ chains[0][1]|count }}</td>
     <td>{{ chains[0][0].ec_numbers_str }}</td>
 </tr>
     {% for chain, results in chains[1:] %}
 <tr>
     <td></td>
+    <td></td>
     <td>{{ chain.id }}</td>
+    <td title="{{ chain.compound }}">{{ chain.compound|truncate(40) }}</td>
     <td>{{ results|count }}</td>
     <td>{{ chain.ec_numbers_str }}</td>
 </tr>
