ENH: More precise results in report table

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,9 +44,16 @@
             color: #ffffff;
         }
 
+        tr.even {
+            background-color: #eeffee;
+        }
+
         tr.alt td {
             color: #000000;
             background-color: #EAF2D3;
+        }
+
+        td.empty {
         }
 
         .no {
