--- a/templates/page.html
+++ b/templates/page.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="/static/style.css">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="style.css") }}">
 <title>{% block title %}{% endblock %}</title>
     <style>
 
