--- a/templates/results.html
+++ b/templates/results.html
@@ -21,8 +21,9 @@
 <div>
     <form method="POST">
         <fieldset>
-            <legend>Structure properties</legend>
-            {{ render_field(form.max_resolution) }}
+            <legend>Report properties</legend>
+            <div class="form-group">{{ render_field(form.max_resolution) }}</div>
+            <div class="form-group">{{ render_field(form.join_results) }}</div>
         </fieldset>
     <p><input id="submit" class="button" type="submit" value="Show results"></p>
     <a href="{{ url_for("index") }}">Back to index</a>
@@ -94,6 +95,7 @@
     <th>P (degrees)</th>
     <th>&gamma;(degrees)</th>
     <th>tm (degrees)</th>
+    <th>R</th>
 </tr>
 </thead>
 <tbody>
@@ -126,6 +128,7 @@
     <td>{{ result.p|round(2) }}&#176;</td>
     <td>{{ result.gamma|round(2) }}&#176;</td>
     <td>{{ result.tm|round(2) }}&#176;</td>
+    <td>{{ result.mixed_results }}</td>
     </tr>
     {% endfor %}
     {% endfor %}
