--- a/templates/results.html
+++ b/templates/results.html
@@ -24,6 +24,7 @@
             <legend>Report properties</legend>
             <div class="form-group">{{ render_field(form.max_resolution) }}</div>
             <div class="form-group">{{ render_field(form.join_results) }}</div>
+            <div class="form-group">{{ render_field(form.join_angle) }}</div>
         </fieldset>
     <p><input id="submit" class="button" type="submit" value="Show results"></p>
     <a href="{{ url_for("index") }}">Back to index</a>
