--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,13 @@
 {% extends "page.html" %}
 
-{% block title %}Nukecon{% endblock %}
+{% block title %}NukeCon{% endblock %}
 
 {% block content %}
 <div id="intro">
-<strong>Nukecon</strong> is ... [[ a tady by to chtelo jednu/dve vety ]]. 
+<strong>NukeCon</strong> – a PDB-based tool for understanding conformational aspects of interactions between proteins and nucleosides or nucleotides.
 <br/>
 <p>
-<a href="{{ url_for("about") }}">Read more</a>
+Source codes: <a href="https://github.com/spirali/nukecon">https://github.com/spirali/nukecon</a>
 </p>
 <p>
 <p>
