--- a/templates/results.html
+++ b/templates/results.html
@@ -1,6 +1,6 @@
 {% extends "page.html" %}
 
-{% block title %}Nukecon / {{component|upper}}{% endblock %}
+{% block title %}NukeCon / {{component|upper}}{% endblock %}
 
 {% macro render_field(field) %}
   <p>{{ field.label }}
