--- a/templates/results.html
+++ b/templates/results.html
@@ -39,7 +39,8 @@
             <div class="form-group">{{ render_field(form.join_results) }}</div>
             <div class="form-group">{{ render_field(form.join_angle) }}</div>
         </fieldset>
-    <p><input id="submit" class="button" type="submit" value="Show results"></p>
+	<p><input id="submit" class="button" type="submit" name="submit" value="Show results">
+	<input id="submit" class="button" type="submit" name="submit" value="Download as CSV"></p>
     <a href="{{ url_for("index") }}">Back to index</a>
     </form>
 </div>
